--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,32 +1,27 @@
 name: Workflow Demo
-
-on: [push]
-
+'on':
+  - push
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Create a text file
-      run: echo "Hello, world!" > hello.txt
-
-    - name: Archive text file
-      uses: actions/upload-artifact@v4
-      with:
-        name: hello-artifact
-        path: hello.txt
-  download: 
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Create a text file
+        run: 'echo "Hello, world!" > hello.txt'
+      - name: Archive text file
+        uses: actions/upload-artifact@v4
+        with:
+          name: hello-artifact
+          path: hello.txt
+  download: #added
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: download text file
+      - name: Download text file
         uses: actions/download-artifact@v4
         with:
-         name: hello-artifats
-         path: ./artifacts
-      - name: display content of the text file
-        run: cat ./artifacts/hello.txt                     
-
+          name: hello-artifact
+          path: ./artifacts
+      - name: Display content of the text file
+        run: cat ./artifacts/hello.txt
